[package]
name = "lauderust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen-futures = "0.4.30"
yew = "0.19.3"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-timers = { version = "0.2.4", features = ["futures"] }
futures-util = "0.3.21"
yew-hooks = "0.1.54"
